tests/baselines/reference/computedPropertiesInDestructuring1.errors.txt
tests/cases/compiler/computedPropertiesInDestructuring1.ts(20,8): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.
tests/cases/compiler/computedPropertiesInDestructuring1.ts(21,12): error TS2339: Property 'toExponential' does not exist on type 'string'.
tests/cases/compiler/computedPropertiesInDestructuring1.ts(33,4): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.
tests/cases/compiler/computedPropertiesInDestructuring1.ts(34,5): error TS2365: Operator '+' cannot be applied to types '1' and '{}'.


==== tests/cases/compiler/computedPropertiesInDestructuring1.ts (4 errors) ====
    // destructuring in variable declarations
    let foo = "bar";
    let {[foo]: bar} = {bar: "bar"};
    
    let {["bar"]: bar2} = {bar: "bar"};
    
    let foo2 = () => "bar";
    let {[foo2()]: bar3} = {bar: "bar"};
    
    let [{[foo]: bar4}] = [{bar: "bar"}];
    let [{[foo2()]: bar5}] = [{bar: "bar"}];
    
    function f1({["bar"]: x}: { bar: number }) {}
    function f2({[foo]: x}: { bar: number }) {}
    function f3({[foo2()]: x}: { bar: number }) {}
    function f4([{[foo]: x}]: [{ bar: number }]) {}
    function f5([{[foo2()]: x}]: [{ bar: number }]) {}
    
    // report errors on type errors in computed properties used in destructuring
    let [{[foo()]: bar6}] = [{bar: "bar"}];
           ~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.
    let [{[foo.toExponential()]: bar7}] = [{bar: "bar"}];
               ~~~~~~~~~~~~~
!!! error TS2339: Property 'toExponential' does not exist on type 'string'.
    
    // destructuring assignment
    ({[foo]: bar} = {bar: "bar"});
    
    ({["bar"]: bar2} = {bar: "bar"});
    
    ({[foo2()]: bar3} = {bar: "bar"});
    
    [{[foo]: bar4}] = [{bar: "bar"}];
    [{[foo2()]: bar5}] = [{bar: "bar"}];
    
    [{[foo()]: bar4}] = [{bar: "bar"}];
       ~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.
    [{[(1 + {})]: bar4}] = [{bar: "bar"}];
        ~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '1' and '{}'.
    
    
    